fixed more spacing issues and hyphenated paragraph tags too

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -34,13 +34,29 @@
       font-size:20px;
     }
 
-    p{
-      font-size:15px;
+    h2{
+      font-size:18px;
+      font-weight:bolder;
     }
 
-    ol {
+    p{
+      font-size:15px;
+      line-height:20px;
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+      -ms-word-break: break-all;
+      word-break: break-word;
+      -ms-hyphens: auto;
+      -moz-hyphens: auto;
+      -webkit-hyphens: auto;
+      hyphens: auto;
+    }
+
+    ol, ul {
       padding: 0;
       width:100%;
+      line-height:20px;
+      font-weight:lighter;
     }
 
     li{
